rnsc/test_data/rns_integration/error/parser/type_hints/float/overflow_recovers.rns
.class @float 9999999999999999999999999999999999999999
unexpected_token ; <- this error should be reported as well
